<resources>
    <string name="app_name">IntentsProj</string>
    <string name="tv_num1">Number 01 :</string>
    <string name="tv_num2">Number 02 :</string>
    <string name="btn_ok">OK</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_div">/</string>
    <string name="tv_toast_msg">Opening Calculator....</string>
</resources>